# DirectXMesh

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  DirectXMesh_Desktop_2012.sln  DirectXMesh_Desktop_2013.sln  DirectXMesh_Desktop_2015.sln  DirectXMesh_Desktop_2015_Win10.sln  DirectXMesh_Desktop_2017.sln  DirectXMesh_Desktop_2017_Win10.sln  DirectXMesh_Desktop_2019.sln  DirectXMesh_Desktop_2019_Win10.sln  DirectXMesh_Desktop_2022.sln  DirectXMesh_Desktop_2022_Win10.sln  DirectXMesh_Desktop_2026.slnx  DirectXMesh_Desktop_2026_Win10.slnx  DirectXMesh_GDKX_2022.sln  DirectXMesh_GDK_2017.sln  DirectXMesh_GDK_2019.sln  DirectXMesh_GDK_2022.sln  DirectXMesh_Windows10.sln  DirectXMesh_Windows10.vcxproj  DirectXMesh_Windows10_2015.sln  DirectXMesh_Windows10_2017.sln  DirectXMesh_Windows10_2019.sln  DirectXMesh_Windows10_2022.sln  DirectXMesh_Windows81.sln  DirectXMesh_WindowsPhone81.sln  DirectXMesh_XboxOneADK.sln  DirectXMesh_XboxOneXDK.sln  DirectXMesh_XboxOneXDK_2015.sln  DirectXMesh_XboxOneXDK_2017.sln  HISTORY.md  README.md  ReadMe.txt
.azuredevops/pipelines/: DirectXMesh-GitHub-CMake-Dev17.yml  DirectXMesh-GitHub-CMake.yml  DirectXMesh-GitHub-Dev17.yml  DirectXMesh-GitHub-GDK-Dev17.yml  DirectXMesh-GitHub-GDK.yml  DirectXMesh-GitHub-MinGW.yml  DirectXMesh-GitHub-SDK-prerelease.yml  DirectXMesh-GitHub-SDK-release.yml  DirectXMesh-GitHub-Test-Dev17.yml  DirectXMesh-GitHub-Test.yml  DirectXMesh-GitHub-WSL-11.yml  DirectXMesh-GitHub-WSL-13.yml  DirectXMesh-GitHub-WSL.yml  DirectXMesh-GitHub.yml  DirectXMesh-OneFuzz-Coverage.yml  DirectXMesh-OneFuzz.yml  DirectXMesh-SDL.yml
.azuredevops/policies/: approvercountpolicy.yml  branchClassification.yml  inventory-enablement.yml
.azuredevops/templates/: DirectXMesh-build-GDK.yml  DirectXMesh-build-gdk.yml  DirectXMesh-build-gdkx.yml  DirectXMesh-build-uwp.yml  DirectXMesh-build-win32.yml
.github/: copilot-instructions.md
.github/linters/: actionlint.yml
.github/skills/directxmesh-usage/: SKILL.md
.github/skills/release/: SKILL.md
.github/skills/release/assets/: vcpkgdxmesh.cmd
.github/workflows/: arm64.yml  arm64bvt.yml  bvt.yml  clangcl.yml  codeql.yml  lint.yml  main.yml  msbuild.yml  msvc.yml  scorecards.yml  test.yml  uwp.yml  vcpkg.yml  wsl.yml
.nuget/: DirectXMesh-config.cmake.in  directxmesh-config.cmake.in  directxmesh_desktop_2015.nuspec  directxmesh_desktop_2017.nuspec  directxmesh_desktop_2019.nuspec  directxmesh_desktop_2019.targets  directxmesh_desktop_win10.nuspec  directxmesh_desktop_win10.targets  directxmesh_uwp.nuspec  directxmesh_uwp.targets  signconfig_desktop.xml  signconfig_desktop_2015.xml  signconfig_desktop_win10.xml  signconfig_uwp.xml  versioninfo.ps1
DirectXMesh/: CMakeLists.txt  DirectXMesh.h  DirectXMesh.inl  DirectXMeshAdjacency.cpp  DirectXMeshClean.cpp  DirectXMeshConcat.cpp  DirectXMeshGSAdjacency.cpp  DirectXMeshNormals.cpp  DirectXMeshOptimize.cpp  DirectXMeshOptimizeLRU.cpp  DirectXMeshOptimizeTVC.cpp  DirectXMeshP.h  DirectXMeshRemap.cpp  DirectXMeshTangentFrame.cpp  DirectXMeshUtil.cpp  DirectXMeshVBReader.cpp  DirectXMeshVBWriter.cpp  DirectXMeshValidate.cpp  DirectXMeshWeldVertices.cpp  DirectXMesh_Desktop_2010.sln  DirectXMesh_Desktop_2010.vcxproj  DirectXMesh_Desktop_2012.sln  DirectXMesh_Desktop_2012.vcxproj  DirectXMesh_Desktop_2012.vcxproj.filters  DirectXMesh_Desktop_2013.sln  DirectXMesh_Desktop_2013.vcxproj  DirectXMesh_Desktop_2013.vcxproj.filters  DirectXMesh_Desktop_2015.sln  DirectXMesh_Desktop_2015.vcxproj  DirectXMesh_Desktop_2015.vcxproj.filters  DirectXMesh_Desktop_2015_Win10.vcxproj  DirectXMesh_Desktop_2015_Win10.vcxproj.filters  DirectXMesh_Desktop_2017.vcxproj  DirectXMesh_Desktop_2017.vcxproj.filters  DirectXMesh_Desktop_2017_Win10.vcxproj  DirectXMesh_Desktop_2017_Win10.vcxproj.filters  DirectXMesh_Desktop_2019.vcxproj  DirectXMesh_Desktop_2019.vcxproj.filters  DirectXMesh_Desktop_2019_Win10.vcxproj  DirectXMesh_Desktop_2022.vcxproj  (+40 more)
Meshconvert/: BrokenCube.sdkmesh  Mesh.cpp  Mesh.h  MeshOBJ.cpp  MeshX.cpp  Mesh_glTF.cpp  Meshconvert.cpp  Meshconvert_Desktop_2010.sln  Meshconvert_Desktop_2010.vcxproj  Meshconvert_Desktop_2010.vcxproj.filters  Meshconvert_Desktop_2012.sln  Meshconvert_Desktop_2012.vcxproj  Meshconvert_Desktop_2012.vcxproj.filters  Meshconvert_Desktop_2013.sln  Meshconvert_Desktop_2013.vcxproj  Meshconvert_Desktop_2015.sln  Meshconvert_Desktop_2015.vcxproj  Meshconvert_Desktop_2015.vcxproj.filters  Meshconvert_Desktop_2017.vcxproj  Meshconvert_Desktop_2017.vcxproj.filters  Meshconvert_Desktop_2019.vcxproj  Meshconvert_Desktop_2019.vcxproj.filters  Meshconvert_Desktop_2019_Win10.vcxproj  Meshconvert_Desktop_2019_Win10.vcxproj.filters  Meshconvert_Desktop_2022.vcxproj  Meshconvert_Desktop_2022.vcxproj.filters  Meshconvert_Desktop_2022_Win10.vcxproj  Meshconvert_Desktop_2022_Win10.vcxproj.filters  Meshconvert_Desktop_2026.vcxproj  Meshconvert_Desktop_2026.vcxproj.filters  Meshconvert_Desktop_2026_Win10.vcxproj  meshconvert.rc  packages.config  vbo.h
Utilities/: ACMR.h  FlexibleVertexFormat.h  WaveFrontReader.h
nuget/: directxmesh_desktop_2015.nuspec  directxmesh_desktop_2015.targets  directxmesh_uwp.nuspec
skills/directxmesh-usage/: SKILL.md
skills/directxmesh-usage/reference/: overview.md
skills/mesh-converter/: SKILL.md
skills/mesh-converter/reference/: options.md
